removed simpy references and sim components ref

--- a/simulations/Mesa Simulations/Study 1.ipynb
+++ b/simulations/Mesa Simulations/Study 1.ipynb
@@ -30,14 +30,12 @@
    "outputs": [],
    "source": [
     "import random\n",
-    "import simpy\n",
     "import datetime\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import agent\n",
     "import model\n",
     "import matplotlib.pyplot as plt\n",
-    "import simulation_functions as sc\n",
     "\n",
     "# Group & Signature Parameters\n",
     "group_size_array = [10, 20, 30, 40, 50, 60, 70]# number of virtual stakers in a group - nodes to stakers is a 1-many relationship\n",
@@ -47,6 +45,8 @@
     "max_malicious_threshold = 50 # % of malicious node ownership needed to sign\n",
     "signature_delay = 2 # lambda for poisson distribution used to generate a delay before the signature is executed\n",
     "group_expiry = 10 # number of steps after which a group expires\n",
+    "Misbehaving_DKG_nodes = 10 # percent of nodes misbehaving during dkg\n",
+    "dkg_block_delay = 3 # blocks needed to run DKG\n",
     "\n",
     "#Node parameters\n",
     "node_failure_percent_array = [10, 20, 30, 40, 50, 60, 70] # % of times nodes fail and have to reconnect\n",
@@ -109,7 +109,7 @@
     "plt.bar(x, ticket_distribution)\n",
     "plt.title(\"Virtual Staker Distribution\")\n",
     "\n",
-    "cdf_L02=sc.create_cdf(nodes,ticket_distribution)\n",
+    "cdf_L02=model.create_cdf(nodes,ticket_distribution)\n",
     "plt.subplot(2, 1, 2)\n",
     "plt.bar(x, cdf_L02)\n",
     "plt.title(\"Virtual Staker Cumulative Distribution\")"
@@ -153,8 +153,7 @@
     "                                          node_connection_delay,\n",
     "                                          node_mainloop_connection_delay,\n",
     "                                          log_filename,\n",
-    "                                          run_number\n",
-    "                                         )\n",
+    "                                          run_number,Misbehaving_DKG_nodes,dkg_block_delay)\n",
     "            for i in range (steps):\n",
     "                # step the model\n",
     "                beacon_model.step()\n",
@@ -178,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -216,79 +215,79 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>10</td>\n",
-       "      <td>2.95</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>1.95</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.15</td>\n",
+       "      <td>1.90</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>20</td>\n",
-       "      <td>16.40</td>\n",
-       "      <td>7.55</td>\n",
-       "      <td>5.20</td>\n",
-       "      <td>4.70</td>\n",
-       "      <td>1.95</td>\n",
-       "      <td>3.95</td>\n",
-       "      <td>3.70</td>\n",
+       "      <td>15.20</td>\n",
+       "      <td>7.70</td>\n",
+       "      <td>5.15</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>2.15</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>2.80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30</td>\n",
-       "      <td>34.85</td>\n",
-       "      <td>26.60</td>\n",
-       "      <td>20.10</td>\n",
-       "      <td>11.80</td>\n",
-       "      <td>12.65</td>\n",
-       "      <td>14.45</td>\n",
-       "      <td>13.80</td>\n",
+       "      <td>39.85</td>\n",
+       "      <td>28.75</td>\n",
+       "      <td>20.20</td>\n",
+       "      <td>15.55</td>\n",
+       "      <td>16.50</td>\n",
+       "      <td>13.25</td>\n",
+       "      <td>11.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>40</td>\n",
-       "      <td>63.35</td>\n",
-       "      <td>56.00</td>\n",
-       "      <td>54.55</td>\n",
-       "      <td>51.60</td>\n",
-       "      <td>44.90</td>\n",
-       "      <td>41.10</td>\n",
-       "      <td>39.15</td>\n",
+       "      <td>63.70</td>\n",
+       "      <td>53.85</td>\n",
+       "      <td>47.95</td>\n",
+       "      <td>45.05</td>\n",
+       "      <td>46.35</td>\n",
+       "      <td>44.55</td>\n",
+       "      <td>40.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>50</td>\n",
-       "      <td>84.35</td>\n",
-       "      <td>78.30</td>\n",
-       "      <td>78.20</td>\n",
-       "      <td>77.45</td>\n",
-       "      <td>81.30</td>\n",
-       "      <td>78.45</td>\n",
-       "      <td>76.85</td>\n",
+       "      <td>79.80</td>\n",
+       "      <td>80.25</td>\n",
+       "      <td>80.20</td>\n",
+       "      <td>83.45</td>\n",
+       "      <td>76.40</td>\n",
+       "      <td>79.55</td>\n",
+       "      <td>79.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>60</td>\n",
-       "      <td>90.35</td>\n",
-       "      <td>92.15</td>\n",
-       "      <td>91.25</td>\n",
-       "      <td>92.00</td>\n",
-       "      <td>91.60</td>\n",
+       "      <td>92.70</td>\n",
+       "      <td>92.80</td>\n",
+       "      <td>94.75</td>\n",
+       "      <td>93.85</td>\n",
+       "      <td>93.35</td>\n",
+       "      <td>94.70</td>\n",
        "      <td>94.35</td>\n",
-       "      <td>93.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>70</td>\n",
-       "      <td>96.75</td>\n",
-       "      <td>96.05</td>\n",
-       "      <td>96.00</td>\n",
-       "      <td>96.30</td>\n",
+       "      <td>97.55</td>\n",
+       "      <td>94.85</td>\n",
+       "      <td>96.95</td>\n",
+       "      <td>98.00</td>\n",
        "      <td>97.75</td>\n",
-       "      <td>96.10</td>\n",
-       "      <td>95.80</td>\n",
+       "      <td>96.95</td>\n",
+       "      <td>96.15</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -296,16 +295,16 @@
       ],
       "text/plain": [
        "   Failure %     10     20     30     40     50     60     70\n",
-       "0         10   2.95   0.00   1.95   1.00   1.15   0.00   0.00\n",
-       "1         20  16.40   7.55   5.20   4.70   1.95   3.95   3.70\n",
-       "2         30  34.85  26.60  20.10  11.80  12.65  14.45  13.80\n",
-       "3         40  63.35  56.00  54.55  51.60  44.90  41.10  39.15\n",
-       "4         50  84.35  78.30  78.20  77.45  81.30  78.45  76.85\n",
-       "5         60  90.35  92.15  91.25  92.00  91.60  94.35  93.55\n",
-       "6         70  96.75  96.05  96.00  96.30  97.75  96.10  95.80"
+       "0         10   0.00   1.90   0.00   0.00   2.10   0.00   0.90\n",
+       "1         20  15.20   7.70   5.15   3.75   2.15   1.85   2.80\n",
+       "2         30  39.85  28.75  20.20  15.55  16.50  13.25  11.40\n",
+       "3         40  63.70  53.85  47.95  45.05  46.35  44.55  40.75\n",
+       "4         50  79.80  80.25  80.20  83.45  76.40  79.55  79.40\n",
+       "5         60  92.70  92.80  94.75  93.85  93.35  94.70  94.35\n",
+       "6         70  97.55  94.85  96.95  98.00  97.75  96.95  96.15"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
