--- a/docs/rfc/rfc-9-upgradeable-contract-components.adoc
+++ b/docs/rfc/rfc-9-upgradeable-contract-components.adoc
@@ -8,7 +8,7 @@ toc::[]
 
 == Background
 
-Stakers in the Keep network use work contracts to perform work for customers.
+Stakers in the Keep network use _work contracts_ to perform work for customers.
 Work contracts make the off-chain work of stakers
 available to on-chain applications
 using a system of rewards and punishments to enforce correct behavior.
@@ -108,15 +108,30 @@ for security and correct incentives.
 Each operator contract is associated with one or more service contracts
 the operator contract provides functionality for.
 Only these specified service contracts
-may use the operator contract's interface.
+may use the operator contract's interface;
+operator contracts do not communicate directly
+with other operator contracts,
+customer applications,
+or unassociated service contracts.
+
 When the interface is designed,
 the service contract must be treated as untrusted
 and the operator contract must maintain correctness
+and the safety of the operators' stakes
 regardless of the service contract input.
+Where this cannot be guaranteed,
+it must be clearly signaled off-chain to operators
+so they can choose whether to opt in to providing those services.
 
-When a operator contract performs a service,
+When an operator contract performs a service,
 it is paid for the service provided.
-The payment is distributed according to the operator contract's own rules.
+The payment is distributed to contributing operators
+according to the operator contract's own rules.
+
+If one or more participant operators misbehave
+or fail to perform promised work,
+the operator contract tells the staking contract to punish the guilty parties
+and optionally reward a tattletale that proved the misbehavior.
 
 ==== Service contract
 
@@ -127,7 +142,7 @@ to provide useful services to customers.
 Service contracts receive requests for services from customers,
 and divide the provided service to operator contract and service contract components.
 Elements that are critical for security and incentives
-are delegated to a operator contract,
+are delegated to an operator contract,
 while other parts of the work are performed in the service contract.
 
 Service contracts can use
@@ -193,12 +208,34 @@ When a sufficient amount of time has elapsed
 and stakers have had the opportunity to migrate,
 support for the old staking contract can be dropped.
 
+==== Security-critical service contracts
+
+In some situations it may not be possible to contain critical code
+entirely within the operator contract.
+If the service contract has to provide trusted input
+that may impact operators' stakes,
+the opt-in stake security can be maintained
+if the service contract is immutable
+and upgrades are performed by deploying new operator contracts.
+
+In these situations care should be taken to ensure
+that operator contracts cannot interfere with each other.
+As a general rule,
+state shared between different operator contracts
+should not be used to impact stakes.
+
+If a customer application provides the trusted input,
+operators should have a method to opt in
+to only serving those applications they have audited and found acceptable.
+
 === Limitations
 
 Untrusted service contracts mean
 that security-critical state must be kept in the operator contract.
 If the network service has complex security needs,
 the operator contract may have to implement most of the work logic.
+If the service contract performs critical logic,
+its upgrade flexibility is significantly limited.
 
 Security-critical state cannot be migrated between operator contracts;
 a new operator contract has to start from a blank slate.
@@ -207,7 +244,7 @@ present a limit to how rapidly the system can be upgraded.
 
 The division of service contracts and operator contracts
 doesn't map cleanly to situations
-where the service to applications consists of providing keeps,
+where the service to applications consists of providing _keeps_,
 individual smart contracts deployed for individual groups of operators.
 
 === Example: Random Beacon
@@ -295,7 +332,7 @@ When receiving a request,
 the service contract determines what values should be
 the group selection input
 and the signing input.
-The group selection input is used to select a operator contract,
+The group selection input is used to select an operator contract,
 weighted by the number of active groups on each,
 to serve the request.
 
@@ -342,7 +379,7 @@ a global "canonical" chain of entries,
 each linked to the previous ones.
 
 Most currently envisioned services on the Keep network
-consist of providing keeps to customer applications.
+consist of providing _keeps_ to customer applications.
 The operator contract/service contract split
 is less than ideal for this use-case,
 and the random beacon could be rearchitected to follow the same pattern.
